<resources>
    <string name="app_name">AppPenns</string>
    <string name="txt_init">Initializing</string>
    <string name="txt_new_message">De: %1$s (Nuevo)</string>
    <string name="txt_new_message_from">De: %1$s</string>
    <string name="txt_new_message_to">Para: %1$s</string>
    <string name="txt_new_message_date">Fecha: %1$s</string>
    <string name="txt_sync_status">Completado %1$s</string>
    <string name="txt_sync_progress">Descargado %1$s kbs de %2$s kbs</string>
    <string name="txt_sync_start">Iniciando proceso ...</string>
    <string name="txt_sync">Sincronizacion</string>
    <string name="txt_login_error">Usuario no valido</string>
    <string name="txt_audio_error">Error al generar el audio</string>
    <string name="txt_session_error">Se ha perdido la sesion!, reingrese usuario y contraseña.</string>
    <string name="label_email">Email</string>
    <string name="label_quantity">Cantidad</string>
    <string name="label_password">Contraseña</string>
    <string name="label_logout">Salir</string>
    <string name="label_sms">Mensajes</string>
    <string name="label_activity">Actividades</string>
    <string name="label_products">Productos</string>
    <string name="label_client">Cliente/Sucursal</string>
    <string name="label_task">Actividades</string>
    <string name="label_new_sms">%1$s</string>
    <string name="txt_message_title">Información Mensaje</string>
    <string name="txt_task_title">Actividad</string>
    <string name="txt_calendar_title">Calendario</string>
    <string name="txt_message_send">Envío Mensaje</string>
    <string name="txt_error_send">Verifique que tenga los datos requeridos</string>
    <string name="txt_error_desc_send">La descripción es obligatoria</string>
    <string name="txt_error_hour">Verifique que la hora inicial sea menor a la final</string>
    <string name="txt_error_client_sync">Error de conexión a la base de datos de clientes.</string>
    <string name="txt_error_product_sync">Error de conexión a la base de datos de productos.</string>
    <string name="txt_error_user_sync">Error de conexión a la base de datos de usuarios.</string>
    <string name="txt_error_gps">Habilite el GPS para realizar la acción</string>
    <string name="txt_error_conclusion">La conclusión es un campo obligatorio</string>
    <string name="txt_error_task">No hay una actividad definida.</string>
    <string name="txt_error_checkin">La entrada no puede ser realizada.</string>
    <string name="txt_error_checkout">La salida no puede ser realizada.</string>
    <string name="txt_error_database">No se pudo guardar el registro</string>
    <string name="txt_message_to">A:</string>
    <string name="txt_message_type">Tipo:</string>
    <string name="txt_emails">Emails (Separados por comas):</string>
    <string name="txt_address">Sucursal:</string>
    <string name="txt_message_to_send">Para:</string>
    <string name="txt_message_to_all">Para: %1$s</string>
    <string name="txt_distance">Distancia: %1$s kms</string>
    <string name="txt_distance_measure">Calculando distancia...</string>
    <string name="txt_message_from">De:</string>
    <string name="txt_message_date">Fecha:</string>
    <string name="txt_message">Mensaje:</string>
    <string name="txt_version">Versión %1$s</string>
    <string name="txt_version_main">AppPenns Versión %1$s</string>
    <string name="txt_new_messages_bar">Mensajes nuevos: %1$s</string>
    <string name="txt_message_notification">Nuevo mensaje de %1$s</string>
    <string name="txt_activity_notification">Notificacion de %1$s</string>
    <string name="txt_activity_notification_message">Cliente %1$s (%2$s) %3$s</string>
    <string name="txt_map_me">Mi Posicion</string>
    <string name="txt_map_client">Cliente</string>
    <string name="txt_attachments">Adjuntos:</string>
    <string name="txt_notifications">Notificaciones:</string>
    <string name="txt_client">Cliente:</string>
    <string name="txt_type">Tipo:</string>
    <string name="txt_start_time">Hora Inicio:</string>
    <string name="txt_time">Hora:</string>
    <string name="txt_time_value">%1$s - %2$s hrs</string>
    <string name="txt_notification">El usuario %1$s comenta lo siguiente:\n\n%2$s\n%3$s\n\n</string>
    <string name="txt_end_time">Hora Fin:</string>
    <string name="txt_add_client">Cliente/Sucursal</string>
    <string name="txt_pending">Pendiente</string>
    <string name="txt_checkin">Marcar Entrada</string>
    <string name="txt_checkout">Marcar Salida</string>
    <string name="txt_cancelled">Cancelado</string>
    <string name="txt_reprogrammed_item">Reprogramada</string>
    <string name="txt_tracking_item">Seguimiento</string>
    <string name="txt_cancelled_title">Cancelacion</string>
    <string name="txt_cancelled_message">Deseas cancelar la actividad?</string>
    <string name="txt_done">Finalizado</string>
    <string name="txt_add_task">Agregar Actividad</string>
    <string name="txt_date">Fecha:</string>
    <string name="txt_description">Descripción (Obligatorio):</string>
    <string name="txt_task_gps_title">Procesando Actividad</string>
    <string name="txt_task_gps_error">No se pudo registrar la actividad, intentelo nuevamente.</string>
    <string name="txt_task_gps_status">Por favor espere mientras se procesa la informacion ...</string>
    <string name="txt_error_attachment">El archivo no debe ser mayor a 5MB</string>
    <string name="txt_conclusion">Conclusión General (Obligatorio):</string>
    <string name="txt_general_comment">Comentarios Generales:</string>
    <string name="txt_competence_comment">Comentarios Competencia:</string>
    <string name="txt_to_users">Destinatarios</string>
    <string name="txt_users">Usuarios</string>
    <string name="txt_confirm">Confirmación</string>
    <string name="txt_recording">Grabando ...</string>
    <string name="txt_delete">Borrar</string>
    <string name="txt_error_file">No se puedo descargar el archivo</string>
    <string name="txt_error_open_file">Este archivo no puede ser abierto en Android, no hay una aplicación que reconozca el archivo.</string>
    <string name="txt_confirm_checkin">Desea confirmar la entrada?</string>
    <string name="txt_confirm_delete">Desea borrar el archivo?</string>
    <string name="txt_confirm_checkout">Desea confirmar la salida?</string>
    <string name="btn_to">Agregar Destinatarios</string>
    <string name="btn_login">Acceder</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_attachment">Archivo</string>
    <string name="btn_photo">Fotografia</string>
    <string name="btn_audio">Grabar Audio</string>
    <string name="btn_users">Usuarios</string>
    <string name="btn_groups">Grupos</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_cancel_task">Cancelar Actividad</string>
    <string name="btn_tracking_task">Ver Seguimiento</string>
    <string name="btn_back">Regresar</string>
    <string name="btn_levelup">Subir Nivel</string>
    <string name="btn_root">Raíz</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_activity">Actividades</string>
    <string name="btn_calendar">Calendario</string>
    <string name="btn_client_sync">Actualiza Clientes</string>
    <string name="btn_user_sync">Actualiza Datos Sesión</string>
    <string name="btn_product_sync">Actualiza Productos</string>
    <string name="btn_add">Agregar</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_new">Nuevo</string>
    <string name="btn_checkin">Entrada</string>
    <string name="btn_checkout">Salida</string>
    <string name="btn_yes">Si</string>
    <string name="btn_no">No</string>
    <string name="btn_reprogrammed">Reprogramar</string>
    <string name="btn_tracking">Seguimiento</string>
    <string name="txt_has_children">Actividad con Seguimiento</string>
    <string name="txt_reprogrammed">Actividad Reprogramada</string>
    <string name="txt_tracking">Actividad de Seguimiento</string>
    <string name="txt_file_size">Tamaño</string>
    <string name="txt_current_dir">Directorio Actual</string>
    <string name="google_api_key">AIzaSyDQhzesDUJXQVyKou5K385t-I4FNPuLkkM</string>
</resources>
