<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tracking_task"
        android:background="@drawable/custom_button"
        android:id="@+id/trackingTaskBtn"
        android:textColor="#fff"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel_task"
        android:background="@drawable/custom_button"
        android:id="@+id/cancelTaskBtn"
        android:textColor="#fff"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_logout"
        android:background="@drawable/custom_button"
        android:id="@+id/exitBtn"
        android:textColor="#fff"
        android:shadowRadius="1"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowColor="#000"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
