<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#0057B8"
        android:padding="5dp"
        android:gravity="right">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/home"
            android:id="@+id/homeBtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_add_task"
            android:id="@+id/textView"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:textColor="#fff"
            android:layout_weight="3"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:background="@drawable/custom_button"
            android:shadowRadius="2"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowColor="#000"
            android:textColor="#fff"
            android:id="@+id/backBtn"
            android:layout_weight="1" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_date"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:id="@+id/taskDateBtn"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:textColor="#fff"
                android:shadowRadius="1"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="#000"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_client"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:id="@+id/clientBtn"
                android:text="@string/txt_add_client"
                android:layout_weight="6"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:textColor="#fff"
                android:shadowRadius="1"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="#000"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:id="@+id/clientAddressTextView"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="normal" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_description"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:layout_width="0dp"
                android:id="@+id/taskDescEditText"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:background="@drawable/rounded_corner"
                android:lines="5"
                android:padding="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" />

            <Button
                android:layout_width="0dp"
                android:id="@+id/addBtn"
                android:layout_weight="1"
                android:text="@string/btn_add"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:textColor="#fff"
                android:layout_margin="5dp"
                android:shadowRadius="1"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="#000"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

    </TableLayout>

</LinearLayout>
