<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/background"
            android:padding="5dp"
            android:gravity="right">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/home"
                android:layout_marginRight="30dp"
                android:id="@+id/homeBtn" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tracking"
                android:textSize="12sp"
                android:background="@drawable/custom_button_green"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="#000"
                android:textColor="@color/background"
                android:layout_marginRight="5dp"
                android:id="@+id/trackingBtn"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reprogrammed"
                android:textSize="12sp"
                android:background="@drawable/custom_button_green"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="#000"
                android:textColor="@color/background"
                android:layout_marginRight="5dp"
                android:id="@+id/reprogrammedBtn"
                android:layout_weight="1" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_back"
                android:background="@drawable/custom_button_red"
                android:shadowRadius="2"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowColor="#000"
                android:textColor="#fff"
                android:id="@+id/backBtn"
                android:layout_weight="1" />
        </LinearLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_message_date"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/taskDateValue"
                    android:layout_weight="3"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_time"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/taskTimeValue"
                    android:layout_weight="3"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_type"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/taskTypeValue"
                    android:layout_weight="3"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_client"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/taskClientValue"
                    android:layout_weight="3"
                    android:textColor="#000"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_description"
                    android:textColor="#000"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/taskDescValue"
                    android:linksClickable="true"
                    android:autoLink="all"
                    android:textColor="#000"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:background="@drawable/rounded_corner"
                    android:lines="5"
                    android:padding="5dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <fragment
                    android:id="@+id/map"
                    android:name="pennsylvania.jahepi.com.apppenns.components.GoogleMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:text="@string/txt_notifications"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:background="@drawable/rounded_corner"
                    android:linksClickable="true"
                    android:autoLink="all"
                    android:id="@+id/notificationsValues"
                    android:textStyle="normal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:text="@string/txt_attachments"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <ListView android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/attachmentsListView"
                    android:background="@drawable/custom_background"
                    android:layout_weight="1"></ListView>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <Button
                    android:layout_width="0dp"
                    android:id="@+id/photoBtn"
                    android:text="@string/btn_photo"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_button"
                    android:drawableLeft="@drawable/camera"
                    android:textColor="#fff"
                    android:layout_margin="5dp"
                    android:shadowRadius="1"
                    android:layout_weight="1"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowColor="#000"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


                <Button
                    android:layout_width="0dp"
                    android:id="@+id/filesBtn"
                    android:text="@string/btn_attachment"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/file"
                    android:background="@drawable/custom_button"
                    android:textColor="#fff"
                    android:layout_margin="5dp"
                    android:shadowRadius="1"
                    android:layout_weight="1"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowColor="#000"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:text="@string/txt_conclusion"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000"
                    android:background="@drawable/rounded_corner"
                    android:linksClickable="true"
                    android:autoLink="all"
                    android:id="@+id/taskConclusionValue"
                    android:textStyle="normal" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_checkin"
                    android:background="@drawable/custom_button_green"
                    android:shadowRadius="2"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowColor="#000"
                    android:textColor="@color/background"
                    android:id="@+id/checkinBtn"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_checkout"
                    android:background="@drawable/custom_button_green"
                    android:shadowRadius="2"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowColor="#000"
                    android:textColor="#8b0000"
                    android:id="@+id/checkoutBtn"
                    android:layout_weight="1"
                    android:layout_margin="10dp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>